# Signalverarbeitung_UNIX

./: .gitignore  CMakeLists.txt  FileOut.c  Filter.c  Generator.c  Timer.c  compile_helper.h  main.c
include/: FileOut.h  Filter_1.h  Generator.h  Timer.h
